# fastapi-ussd-application

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yaml  pyproject.toml  pytest.ini  start_application.sh
.github/workflows/: workflow.yml
app/: __init__.py  asgi.py  constants.py  enums.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  ussd_view.py
app/controllers/: __init__.py  account_controller.py  base_menu_controller.py  customer_care_controller.py  deposit_controller.py  order_controller.py  registeration_controller.py  ussd_controller.py
app/core/: log.py
app/core/database/: sql_db_setup.py
app/core/exceptions/: app_exception_handler.py  app_exceptions.py
app/core/repository/base/: sql_base_repository.py
app/models/: user_model.py
app/repositories/: __init__.py  user_role_repository.py
app/services/: redis_service.py
app/utils/: __init__.py  util.py
logs/: README.txt
migrations/versions/: 3fb986d387e7_user_model_rename_column.py  abe89433f295_user_model_initial_migration.py
