[tool.poetry]
name = "ussd-be-application"
version = "0.1.0"
description = ""
authors = ["Michael Asumadu <masumadu@archsolutions.online>"]
readme = "README.md"
packages = [{include = "ussd_be_application"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
fastapi-pagination = "^0.12.24"
redis = "^5.0.4"
pydantic-settings = "^2.2.1"
pinject = "^0.14.1"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
